# MLOPS_LAB11

./: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml
.github/workflows/: ci_cd_workflow.yaml  ci_cd_workflow.yaml.yml  hello_world.yaml
src/scripts/: download_artifacts.py  export_classifier_to_onnx.py  export_sentence_transformer_to_onnx.py  settings.py
src/sentiment_app/: app.py  inference.py
src/sentiment_app/api/: schema.py
tests/: test_api.py  test_settings.py
tests/api/: test_schema.py
